[tool.poetry]
name = "spotify2youtube"
version = "0.1.1"
description = "Convert a Spotify Playlist to a YoutubeMusic Playlist"
authors = ["mahart2941 <mahart2941@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
spotipy = "^2.24.0"
ytmusicapi = "^1.8.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
